# assay-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
assay/: __init__.py  answer.py  artifact.py  hashing.py  models.py
assay/api/: __init__.py  index.html
assay/cli/: __init__.py
assay/execute/: __init__.py  solve_for.py  solvers.py
assay/inference/: __init__.py  llama.py
assay/ir/: __init__.py
assay/render/: __init__.py
assay/resolver/: __init__.py
assay/resolver/tables/: constants.json  materials.json
assay/store/: __init__.py  stratadb.py
assay/templates/: __init__.py  coverage.json  plugins.py  promote.py  taxonomy.json
assay/templates/chisel/: README.md
assay/templates/golden/: area.standard_shapes.json  axial_stress.bar.json  beam_deflection.simply_supported.center_point.json  curl.vector_field.json  differentiate.univariate.json  directional_derivative.scalar_field.json  divergence.vector_field.json  equivalent_resistance.series.json  escape_velocity.surface.json  gradient.scalar_field.json  gravitational_potential_energy.point_mass.json  heat.sensible.json  ideal_gas.pressure.json  inequality.univariate.json  integrate.definite.numeric.json  integrate.univariate.json  integrate_multiple.iterated.json  kinetic_energy.point_mass.json  limit.univariate.json  max_rectangle_area.fixed_perimeter.json  minimize.univariate.numeric.json  molar_mass.from_sample.json  molarity.solution.json  ode.initial_value.numeric.json  ode_solve.second_order_linear.json  partial_derivative.scalar_field.json  pendulum.period.simple.json  principal_stress.plane.max.json  projectile.range.json  rc.time_constant.json  relativistic_kinetic_energy.point_mass.json  resistor.voltage_drop.json  root_find.univariate.numeric.json  sample_stats.dataset.json  (+4 more)
assay/verify/: __init__.py
docs/: composition-and-synthesis.md  implementation-plan.md  sandboxing.md
docs/product/: assay-engineering.md  assay-prd.md  assay-ux.md  assay-vision.md
scripts/: __init__.py  check_licenses.py  make_reference_artifacts.py
tests/: test_answer.py  test_api.py  test_artifact.py  test_attribution.py  test_cli.py  test_coverage.py  test_execute.py  test_golden_templates.py  test_inference.py  test_ir.py  test_license_gate.py  test_m0_integration.py  test_m1_gate.py  test_math_stats.py  test_models.py  test_multivariable.py  test_plugins.py  test_promotion.py  test_render.py  test_reproducibility.py  test_resolver.py  test_round8.py  test_schema_v2.py  test_series_op.py  test_smoke.py  test_solvers.py  test_store.py  test_taxonomy.py  test_template_registry.py  test_templates.py  test_trace.py  test_verify.py  test_web.py
tests/reference_artifacts/: beam_deflection_simply_supported_center_point.result.json  differentiate_univariate.result.json  integrate_definite_numeric.result.json  integrate_univariate.result.json  minimize_univariate_numeric.result.json  ode_initial_value_numeric.result.json  pendulum_period_simple.result.json  principal_stress_plane_max.result.json  root_find_univariate_numeric.result.json  solve_equation_univariate.result.json
